# dictation-tauri

./: README.md  index.html  package-lock.json  package.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: audio.rs  inject.rs  lib.rs  main.rs  settings.rs  transcribe.rs
