[package]
name = "dictation-tauri"
version = "0.1.0"
description = "Free, local, hold-to-talk dictation for macOS (Tauri + whisper.cpp)."
authors = ["Nicolas Simi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix is needed to keep the lib name distinct from the bin
# name on Windows (see https://github.com/rust-lang/cargo/issues/8519).
name = "dictation_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.3.2"
cpal = "0.17.3"
parking_lot = "0.12.5"
whisper-rs = { version = "0.16.0", features = ["metal"] }
enigo = "0.6.1"

